--- a/app/static/ejercicios/6to/quimica.html
+++ b/app/static/ejercicios/6to/quimica.html
@@ -374,7 +374,7 @@
         const preguntas = [
             {
                 pregunta: "¿Cuál es el símbolo químico del Oro?",
-                imagen: "https://www.thoughtco.com/thmb/8Z8Y2Q7WQ8JZ8Y2Q7WQ8JZ8Y2Q7WQ8=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/gold-element-5c3b1f3c46e0fb0001f3b6e1.png",
+                imagen: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6rCysu_9JbcYEW4EksTLvjqgFCirIytiCpg&s",
                 opciones: ["Ag", "Au", "Or", "Go"],
                 respuesta: 1,
                 explicacion: "El símbolo químico del Oro es 'Au', que proviene de la palabra latina 'Aurum' que significa 'brillante amanecer'.",
